changes to default

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # System
-APP_NAME="Parser"
-COMPOSE_PROJECT_NAME=parser
+APP_NAME="ProjectName"
+COMPOSE_PROJECT_NAME=project-name
 
 SRC_PATH=/application/src
 PUBLIC_PATH=${SRC_PATH}/public
