changes to nginx

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -10,6 +10,10 @@ server {
 
     root %PUBLIC_PATH%;
 
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -20,3 +24,4 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
