--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM phpdockerio/php:8.1-fpm
 
 RUN apt-get update \
-    && apt-get -y --no-install-recommends install php8.1-memcached php8.1-mysql php8.1-sqlite3 php8.1-xdebug php8.1-mongodb php8.1-intl php8.1-gd php8.1-redis \
+    && apt-get -y --no-install-recommends install php8.1-memcached php8.1-mysql php8.1-sqlite3 php8.1-xdebug php8.1-mongodb php8.1-intl php8.1-gd php8.1-redis mysql-client \
     && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 RUN touch /run/php-fpm.pid \
@@ -10,3 +10,4 @@ RUN touch /run/php-fpm.pid \
     && chown www:www /run/php-fpm.pid
 
 USER www
+
